<resources>
    <string name="app_name">Comarete</string>
    <string name="user_id">User Id</string>
    <string name="login">Login</string>
    <string name="show_pwd">Show Password</string>
    <string name="password">Password</string>
    <string name="zone">Zone</string>
    <string name="consignment_no">Consignment No</string>
    <string name="mobile_no">Mobile No : </string>
    <string name="start_time">Start Time : </string>
    <string name="end_time">End Time : </string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="send_sms">Send Sms</string>
    <string name="user">User</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="WS_LOGIN">https</string>
    <string name="email">Email</string>
    <string name="view_all">View All</string>
    <string name="ok">Ok</string>
    <string name="rate">Rate : </string>
    <string name="vehicle_no">Vehicle Number : </string>
</resources>
