<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_title_bar"
        android:layout_width="match_parent"
        android:background="@color/primary_darker"
        android:padding="@dimen/SIZE_3"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_account_box_white_24dp"
            android:drawablePadding="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLength="10"
            android:padding="10dp"
            android:hint="@string/user"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/TEXT_SIZE_16" />
        <TextView
            android:id="@+id/txt_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zone"
            android:textColor="@color/white_greyish"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_location_on_white_24dp"
            android:drawablePadding="8dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="@dimen/SIZE_10"/>

        <TextView
            android:id="@+id/txt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:textColor="@color/white_greyish"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="@dimen/SIZE_10"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_add_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white_greyish"
        android:layout_weight="1"

        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/SIZE_5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/SIZE_10"
                    android:layout_marginLeft="@dimen/SIZE_10"
                    android:layout_marginBottom="@dimen/SIZE_1"
                    android:background="@drawable/drawable_logi_background_box"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/SIZE_2"
                        android:text="@string/vehicle_no"
                        android:textColor="@color/monsoon"
                        android:textSize="@dimen/TEXT_SIZE_16" />
                    <EditText
                        android:id="@+id/edt_consin_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                        android:maxLength="10"
                        android:padding="7dp"
                        android:textColor="@color/jet"
                        android:textColorHint="@color/monsoon"
                        android:textSize="@dimen/TEXT_SIZE_14" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/SIZE_10"
                    android:background="@drawable/drawable_logi_background_box"
                    android:layout_marginLeft="@dimen/SIZE_10"
                    android:layout_marginBottom="@dimen/SIZE_1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_mobile_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_phone_black_24dp"
                        android:drawablePadding="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:hint="@string/mobile_no"
                        android:maxLength="10"
                        android:padding="7dp"
                        android:textColor="@color/jet"
                        android:textColorHint="@color/monsoon"
                        android:textSize="@dimen/TEXT_SIZE_16" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/SIZE_10"
                    android:layout_marginLeft="@dimen/SIZE_10"
                    android:layout_marginBottom="@dimen/SIZE_1"
                    android:background="@drawable/drawable_logi_background_box"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/SIZE_5"
                        android:text="@string/start_time"
                        android:textColor="@color/monsoon"
                        android:textSize="@dimen/TEXT_SIZE_16" />
                    <TextView
                        android:id="@+id/edt_start_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:padding="7dp"
                        android:textColor="@color/jet"
                        android:textColorHint="@color/monsoon"
                        android:textSize="@dimen/TEXT_SIZE_16" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/SIZE_10"
                    android:layout_marginLeft="@dimen/SIZE_10"
                    android:layout_marginBottom="@dimen/SIZE_1"
                    android:background="@drawable/drawable_logi_background_box"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/SIZE_5"
                        android:text="@string/end_time"
                        android:textColor="@color/monsoon"
                        android:textSize="@dimen/TEXT_SIZE_16" />
                    <TextView
                        android:id="@+id/edt_end_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:padding="7dp"
                        android:textColor="@color/jet"
                        android:textColorHint="@color/monsoon"
                        android:textSize="@dimen/TEXT_SIZE_16" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_spiner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/SIZE_10"
                    android:layout_marginLeft="@dimen/SIZE_10"
                    android:orientation="horizontal">
                    <!--<com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/material_spinner1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="Select Rate"
                        android:visibility="gone"
                        android:layout_weight="1"
                        app:met_floatingLabel="normal"
                        android:textColorHint="#CFD8DC"
                        android:textColor="@color/jet"
                        android:gravity="center"
                        />-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/TEXT_SIZE_16"
                        android:layout_margin="@dimen/SIZE_10"
                        android:text="Select Rate"/>
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/SIZE_10"
                        />
                    <TextView
                        android:id="@+id/txt_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/SIZE_10"
                        android:textSize="@dimen/TEXT_SIZE_16"
                        android:text="@string/rate"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/SIZE_5"
                    android:layout_marginLeft="@dimen/SIZE_5"
                    android:layout_marginRight="@dimen/SIZE_5"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_start"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="@dimen/SIZE_10"
                        android:layout_weight="1"
                        android:background="@drawable/loginbutton_selector"
                        android:text="@string/start"
                        android:textColor="@color/white_greyish"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        />
                    <Button
                        android:id="@+id/btn_end"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="@dimen/SIZE_10"
                        android:layout_weight="1"
                        android:background="@drawable/loginbutton_selector"
                        android:text="@string/end"
                        android:textColor="@color/white_greyish"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/SIZE_10"
        android:background="@color/white_greyish"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/ll_add"
            android:layout_width="match_parent"
            android:padding="@dimen/SIZE_3"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edt_search"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:drawablePadding="@dimen/SIZE_10"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                android:padding="@dimen/SIZE_10"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
            <Button
                android:id="@+id/txt_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD"
                android:textColor="@color/white_greyish"
                android:background="@drawable/loginbutton_selector"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/SIZE_8"
                android:padding="@dimen/SIZE_10"/>
            <Button
                android:id="@+id/btn_send_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/loginbutton_selector"
                android:text="@string/view_all"
                android:textColor="@color/white_greyish"
                android:textSize="14sp"
                android:textStyle="bold"
                />
        </LinearLayout>
<ListView
    android:id="@+id/lv_list"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>